--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,21 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(moveit_tutorials)
 
+add_compile_options(-std=c++11)
+
+find_package(Eigen3 REQUIRED)
+
+# Eigen 3.2 (Wily) only provides EIGEN3_INCLUDE_DIR, not EIGEN3_INCLUDE_DIRS
+if(NOT EIGEN3_INCLUDE_DIRS)
+  set(EIGEN3_INCLUDE_DIRS ${EIGEN3_INCLUDE_DIR})
+endif()
+
 find_package(catkin REQUIRED
   COMPONENTS
     moveit_core
     moveit_ros_planning
     moveit_ros_planning_interface
     pluginlib
-    cmake_modules
     geometric_shapes
 )
 
@@ -18,14 +26,15 @@ catkin_package(
     moveit_core
     moveit_ros_planning_interface
     interactive_markers
+  DEPENDS
+    EIGEN3
 )
-find_package(Eigen REQUIRED)
 
 ###########
 ## Build ##
 ###########
 
-include_directories(SYSTEM ${Boost_INCLUDE_DIR} ${EIGEN_INCLUDE_DIRS})
+include_directories(SYSTEM ${Boost_INCLUDE_DIR} ${EIGEN3_INCLUDE_DIRS})
 include_directories(${catkin_INCLUDE_DIRS})
 link_directories(${catkin_LIBRARY_DIRS})
 
