--- a/package.xml
+++ b/package.xml
@@ -14,11 +14,11 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>pluginlib</build_depend>
+  <build_depend>eigen</build_depend>
   <build_depend>moveit_core</build_depend>
   <build_depend>moveit_ros_planning_interface</build_depend>
   <build_depend>moveit_ros_perception</build_depend>
   <build_depend>interactive_markers</build_depend>
-  <build_depend>cmake_modules</build_depend>
   <build_depend>geometric_shapes</build_depend>
 
   <run_depend>pluginlib</run_depend>
