Revamp move_group_interface_tutorial Reorder tutorial to have demo first, then code explanation Add MoveItVisualTools to enable much better visuals Add step-by-step pause functionality to allow user interaction of demo Added video

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ find_package(catkin REQUIRED
     moveit_ros_planning_interface
     pluginlib
     geometric_shapes
+    moveit_visual_tools
 )
 
 find_package(Boost REQUIRED system filesystem date_time thread)
