--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,8 +39,8 @@ include_directories(SYSTEM ${Boost_INCLUDE_DIR} ${EIGEN3_INCLUDE_DIRS})
 include_directories(${catkin_INCLUDE_DIRS})
 link_directories(${catkin_LIBRARY_DIRS})
 
-add_subdirectory(doc/pr2_tutorials/kinematics)
-add_subdirectory(doc/pr2_tutorials/planning)
-add_subdirectory(doc/pr2_tutorials/state_display)
-add_subdirectory(doc/pr2_tutorials/interactivity)
-add_subdirectory(doc/pr2_tutorials/pick_place)
+add_subdirectory(doc/kinematics)
+add_subdirectory(doc/planning)
+add_subdirectory(doc/state_display)
+add_subdirectory(doc/interactivity)
+add_subdirectory(doc/pick_place)
