--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,15 @@ find_package(catkin REQUIRED
 
 find_package(Boost REQUIRED system filesystem date_time thread)
 
+set(THIS_PACKAGE_INCLUDE_DIRS
+  doc/interactivity/include
+)
+
 catkin_package(
+  LIBRARIES
+    interactivity_utils
+  INCLUDE_DIRS
+    ${THIS_PACKAGE_INCLUDE_DIRS}
   CATKIN_DEPENDS
     moveit_core
     moveit_ros_planning_interface
@@ -35,12 +43,20 @@ catkin_package(
 ## Build ##
 ###########
 
-include_directories(SYSTEM ${Boost_INCLUDE_DIR} ${EIGEN3_INCLUDE_DIRS})
+include_directories(SYSTEM ${THIS_PACKAGE_INCLUDE_DIRS} ${Boost_INCLUDE_DIR} ${EIGEN3_INCLUDE_DIRS})
 include_directories(${catkin_INCLUDE_DIRS})
 link_directories(${catkin_LIBRARY_DIRS})
 
 add_subdirectory(doc/kinematics)
+add_subdirectory(doc/kinematic_model)
 add_subdirectory(doc/planning)
+add_subdirectory(doc/planning_scene)
+add_subdirectory(doc/planning_scene_ros_api)
+add_subdirectory(doc/motion_planning_api)
+add_subdirectory(doc/motion_planning_pipeline)
+add_subdirectory(doc/collision_contact)
+add_subdirectory(doc/move_group_interface)
+add_subdirectory(doc/move_group_python_interface)
 add_subdirectory(doc/state_display)
 add_subdirectory(doc/interactivity)
 add_subdirectory(doc/pick_place)
