--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,13 +51,13 @@ include_directories(${catkin_INCLUDE_DIRS})
 link_directories(${catkin_LIBRARY_DIRS})
 
 add_subdirectory(doc/kinematics)
-add_subdirectory(doc/kinematic_model)
+add_subdirectory(doc/robot_model_and_robot_state)
 add_subdirectory(doc/planning)
 add_subdirectory(doc/planning_scene)
 add_subdirectory(doc/planning_scene_ros_api)
 add_subdirectory(doc/motion_planning_api)
 add_subdirectory(doc/motion_planning_pipeline)
-add_subdirectory(doc/collision_contact)
+add_subdirectory(doc/visualizing_collisions)
 add_subdirectory(doc/move_group_interface)
 add_subdirectory(doc/move_group_python_interface)
 add_subdirectory(doc/state_display)
