--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,17 @@
 # Test build the MoveIt! tutorials. Author: Dave Coleman
 sudo: required
 dist: trusty
-language: generic
+language: ruby
+rvm:
+  - 2.4
 python:
   - "2.7"
 compiler:
   - gcc
+
 before_install: # Use this to prepare the system to install prerequisites or dependencies
   # Define some config vars
+  - export NOKOGIRI_USE_SYSTEM_LIBRARIES=true
   - export CI_SOURCE_PATH=$(pwd)
   - export REPOSITORY_NAME=${PWD##*/}
   - echo "Testing branch $TRAVIS_BRANCH of $REPOSITORY_NAME"
@@ -18,19 +22,10 @@ before_install: # Use this to prepare the system to install prerequisites or dep
   # Setup rosdep
   - sudo rosdep init
   - rosdep update
-
-install:
-  - sudo apt-get update
-  # Install newer version of ruby
-  - sudo apt-get -qq install software-properties-common
-  - sudo apt-add-repository -y ppa:brightbox/ruby-ng
-  - sudo apt-get update
-  - sudo apt-get -qq install ruby2.2-dev ruby2.2
   # Install htmlpoofer
-  - sudo gem update
-  - sudo gem install pkg-config
-  - sudo gem install mini_portile2
-  - sudo gem install html-proofer
+  - gem update --system
+  - gem --version
+  - gem install html-proofer
   # Install ROS's version of sphinx
   - sudo apt-get -qq install ros-indigo-rosdoc-lite
   - source /opt/ros/indigo/setup.bash
