--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,8 @@ find_package(catkin REQUIRED
     moveit_ros_planning_interface
     pluginlib
     geometric_shapes
+    pcl_ros
+    pcl_conversions
 )
 
 find_package(Boost REQUIRED system filesystem date_time thread)
@@ -61,3 +63,4 @@ add_subdirectory(doc/move_group_python_interface)
 add_subdirectory(doc/state_display)
 add_subdirectory(doc/interactivity)
 add_subdirectory(doc/pick_place)
+add_subdirectory(doc/perception_configuration)
