handled most changes requested by @mlautman except refactoring and related to preprocessing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,4 +63,4 @@ add_subdirectory(doc/move_group_python_interface)
 add_subdirectory(doc/state_display)
 add_subdirectory(doc/interactivity)
 add_subdirectory(doc/pick_place)
-add_subdirectory(doc/perception_configuration)
+add_subdirectory(doc/perception_pipeline)
