--- a/package.xml
+++ b/package.xml
@@ -22,6 +22,9 @@
   <build_depend>interactive_markers</build_depend>
   <build_depend>geometric_shapes</build_depend>
   <build_depend>moveit_visual_tools</build_depend>
+  <build_depend>pcl_ros</build_depend>
+  <build_depend>pcl_conversions</build_depend>
+  
 
   <run_depend>pluginlib</run_depend>
   <run_depend>moveit_core</run_depend>
@@ -31,5 +34,7 @@
   <run_depend>interactive_markers</run_depend>
   <run_depend>moveit_visual_tools</run_depend>
   <run_depend>joy</run_depend>
+  <run_depend>pcl_ros</run_depend>
+  <run_depend>pcl_conversions</run_depend>
 
 </package>
