reducing size of bag and including it
* created a publisher to read a bag with single topic and publish it while using current time.
* update deps
* update launch
* add bag

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ find_package(catkin REQUIRED
     geometric_shapes
     pcl_ros
     pcl_conversions
+    rosbag
 )
 
 find_package(Boost REQUIRED system filesystem date_time thread)
