--- a/package.xml
+++ b/package.xml
@@ -24,7 +24,7 @@
   <build_depend>moveit_visual_tools</build_depend>
   <build_depend>pcl_ros</build_depend>
   <build_depend>pcl_conversions</build_depend>
-  
+  <build_depend>rosbag</build_depend>
 
   <run_depend>pluginlib</run_depend>
   <run_depend>moveit_core</run_depend>
@@ -36,5 +36,6 @@
   <run_depend>joy</run_depend>
   <run_depend>pcl_ros</run_depend>
   <run_depend>pcl_conversions</run_depend>
+  <run_depend>rosbag</run_depend>
 
 </package>
