--- a/package.xml
+++ b/package.xml
@@ -26,8 +26,10 @@
   <build_depend>pcl_conversions</build_depend>
   <build_depend>rosbag</build_depend>
 
+  <run_depend>panda_moveit_config</run_depend>
   <run_depend>pluginlib</run_depend>
   <run_depend>moveit_core</run_depend>
+  <run_depend>moveit_commander</run_depend>
   <run_depend>moveit_fake_controller_manager</run_depend>
   <run_depend>moveit_ros_planning_interface</run_depend>
   <run_depend>moveit_ros_perception</run_depend>
