--- a/package.xml
+++ b/package.xml
@@ -38,6 +38,7 @@
   <run_depend>moveit_ros_perception</run_depend>
   <run_depend>interactive_markers</run_depend>
   <run_depend>moveit_visual_tools</run_depend>
+  <run_depend>moveit_resources</run_depend>
   <run_depend>joy</run_depend>
   <run_depend>pcl_ros</run_depend>
   <run_depend>pcl_conversions</run_depend>
