--- a/package.xml
+++ b/package.xml
@@ -38,7 +38,6 @@
   <run_depend>moveit_ros_perception</run_depend>
   <run_depend>interactive_markers</run_depend>
   <run_depend>moveit_visual_tools</run_depend>
-  <run_depend>moveit_resources</run_depend>
   <run_depend>joy</run_depend>
   <run_depend>pcl_ros</run_depend>
   <run_depend>pcl_conversions</run_depend>
@@ -46,5 +45,7 @@
   <run_depend>tf2_ros</run_depend>
   <run_depend>tf2_eigen</run_depend>
   <run_depend>tf2_geometry_msgs</run_depend>
+
+  <test_depend>moveit_resources</test_depend>
 
 </package>
