Testing tutorial needs rundep on moveit_resources. (#245)
* Testing tutorial needs rundep on moveit_resources.

* Moveing moving_resources from run_dep to test_dep

--- a/package.xml
+++ b/package.xml
@@ -46,4 +46,6 @@
   <run_depend>tf2_eigen</run_depend>
   <run_depend>tf2_geometry_msgs</run_depend>
 
+  <test_depend>moveit_resources</test_depend>
+
 </package>
