--- a/doc/visualizing_collisions/CMakeLists.txt
+++ b/doc/visualizing_collisions/CMakeLists.txt
@@ -2,9 +2,8 @@ add_executable(visualizing_collisions_tutorial
   src/visualizing_collisions_tutorial.cpp
 )
 
-target_link_libraries(
-  visualizing_collisions_tutorial
-  interactive_markers
+target_link_libraries(visualizing_collisions_tutorial
+  ${interactive_markers_LIBRARIES}
   interactivity_utils
   ${catkin_LIBRARIES}
   ${Boost_LIBRARIES}
