--- a/doc/tests/CMakeLists.txt
+++ b/doc/tests/CMakeLists.txt
@@ -1,3 +1,8 @@
-catkin_add_gtest(tests_tutorial src/tests.cpp)
-target_link_libraries(tests_tutorial ${catkin_LIBRARIES} ${Boost_LIBRARIES})
-install(TARGETS tests_tutorial DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
+if(CATKIN_ENABLE_TESTING)
+  find_package(moveit_resources REQUIRED)
+  include_directories(${moveit_resources_INCLUDE_DIRS})
+
+  catkin_add_gtest(tests_tutorial test/tests.cpp)
+  target_link_libraries(tests_tutorial moveit_test_utils ${catkin_LIBRARIES} ${Boost_LIBRARIES})
+
+endif()
