Add example controller manager to tutorials

--- a/package.xml
+++ b/package.xml
@@ -50,4 +50,9 @@
   <test_depend>moveit_resources</test_depend>
   <test_depend>rosunit</test_depend>
 
+  <export>
+    <!-- An example controller manager plugin for MoveIt. This is not functional code. -->
+    <moveit_core plugin="${prefix}/doc/controller_configuration/moveit_controller_manager_example_plugin_description.xml"/>
+  </export>
+
 </package>
