--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ compiler: gcc
 before_install: # Use this to prepare the system to install prerequisites or dependencies
   # Define some config vars
   - export ROS_DISTRO=melodic
-  - export ROS_REPO=ros
-
+  - export ROS_WS=/root/ws_moveit
+  - export DOCKER_IMAGE=moveit/moveit:master-source
   - export NOKOGIRI_USE_SYSTEM_LIBRARIES=true
   - export REPOSITORY_NAME=${PWD##*/}
   - echo "Testing branch $TRAVIS_BRANCH of $REPOSITORY_NAME"
@@ -33,7 +33,7 @@ before_install: # Use this to prepare the system to install prerequisites or dep
   - source /opt/ros/kinetic/setup.bash
 
 before_script:
-  - git clone -q --depth=1 https://github.com/ros-planning/moveit_ci.git .moveit_ci
+  - git clone -q -b changing-default-ws --depth=1 https://github.com/ros-planning/moveit_ci.git .moveit_ci
 
 script:
   # Build tutorial examples
