--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,7 +61,7 @@ add_subdirectory(doc/move_group_python_interface)
 add_subdirectory(doc/state_display)
 add_subdirectory(doc/interactivity)
 add_subdirectory(doc/pick_place)
-add_subdirectory(doc/named_frames)
+add_subdirectory(doc/subframes)
 add_subdirectory(doc/perception_pipeline)
 add_subdirectory(doc/tests)
 add_subdirectory(doc/controller_configuration)
