--- a/package.xml
+++ b/package.xml
@@ -55,6 +55,9 @@
   <export>
     <!-- An example controller manager plugin for MoveIt. This is not functional code. -->
     <moveit_core plugin="${prefix}/doc/controller_configuration/moveit_controller_manager_example_plugin_description.xml"/>
+
+    <!-- An example of planner plugin for MoveIt -->
+    <moveit_core plugin="${prefix}/doc/creating_planner_plugin/emptyplan_interface_plugin_description.xml"/>
   </export>
 
 </package>
