--- a/.travis.yml
+++ b/.travis.yml
@@ -1,32 +1,25 @@
-# Test build the MoveIt! tutorials. Author: Dave Coleman
+# Test build the MoveIt tutorials. Author: Dave Coleman
 sudo: required
-dist: trusty
+dist: xenial
 language: ruby
 rvm:
   - 2.4
 python:
   - "2.7"
-compiler:
-  - gcc
+cache: ccache
+compiler: gcc
 
 before_install: # Use this to prepare the system to install prerequisites or dependencies
   # Define some config vars
+  - export ROS_DISTRO=melodic
+  - export DOCKER_IMAGE=moveit/moveit:melodic-source
+
   - export NOKOGIRI_USE_SYSTEM_LIBRARIES=true
-  - export CI_SOURCE_PATH=$(pwd)
   - export REPOSITORY_NAME=${PWD##*/}
   - echo "Testing branch $TRAVIS_BRANCH of $REPOSITORY_NAME"
   - sudo -E sh -c 'echo "deb http://packages.ros.org/ros/ubuntu `lsb_release -cs` main" > /etc/apt/sources.list.d/ros-latest.list'
   - wget http://packages.ros.org/ros.key -O - | sudo apt-key add -
   - sudo apt-get update -qq
-  # Start: there is an issue with postgres on Travis. By removing postgres, the issue is resolved.
-  # TODO: remove this work-around
-  - sudo apt-get purge postgresql* -y -qq
-  - sudo apt-get autoremove -y -qq
-  - sudo apt-get install synaptic -y -qq
-  - sudo apt-get update -qq
-  - sudo apt-get upgrade -y -qq --allow-unauthenticated
-  - sudo apt-get install postgresql -y -qq
-  # End: changes made to fix postgresql issue
   - sudo apt-get install -qq -y python-rosdep python-wstool python-catkin-tools
   # Setup rosdep
   - sudo rosdep init
@@ -36,10 +29,15 @@ before_install: # Use this to prepare the system to install prerequisites or dep
   - gem --version
   - gem install html-proofer
   # Install ROS's version of sphinx
-  - sudo apt-get -qq install ros-indigo-rosdoc-lite
-  - source /opt/ros/indigo/setup.bash
+  - sudo apt-get -qq install ros-kinetic-rosdoc-lite
+  - source /opt/ros/kinetic/setup.bash
+
+before_script:
+  - git clone -q --depth=1 https://github.com/ros-planning/moveit_ci.git .moveit_ci
 
 script:
+  # Build tutorial examples
+  - .moveit_ci/travis.sh
   # Test build with non-ROS wrapped Sphinx command to allow warnings and errors to be caught
   - sphinx-build -W -b html . native_build
   # Test build with ROS-version of Sphinx command so that it is generated same as ros.org
