Add required dest of shared libs for Windows.

--- a/doc/interactivity/CMakeLists.txt
+++ b/doc/interactivity/CMakeLists.txt
@@ -37,6 +37,12 @@ install(
   LIBRARY
   DESTINATION
     ${CATKIN_PACKAGE_LIB_DESTINATION}
+  ARCHIVE
+  DESTINATION
+    ${CATKIN_PACKAGE_LIB_DESTINATION}
+  RUNTIME
+  DESTINATION
+    ${CATKIN_GLOBAL_BIN_DESTINATION}
 )
 
 install(DIRECTORY launch DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
