install missing launch folders

--- a/doc/interactivity/CMakeLists.txt
+++ b/doc/interactivity/CMakeLists.txt
@@ -40,3 +40,5 @@ install(
 )
 
 install(DIRECTORY include/ DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
+
+install(DIRECTORY launch DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
