--- a/doc/motion_planning_pipeline/CMakeLists.txt
+++ b/doc/motion_planning_pipeline/CMakeLists.txt
@@ -2,3 +2,4 @@ add_executable(motion_planning_pipeline_tutorial src/motion_planning_pipeline_tu
 target_link_libraries(motion_planning_pipeline_tutorial ${catkin_LIBRARIES} ${Boost_LIBRARIES})
 install(TARGETS motion_planning_pipeline_tutorial DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 
+install(DIRECTORY launch DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
