Added an example case to use trajopt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,3 +65,4 @@ add_subdirectory(doc/subframes)
 add_subdirectory(doc/perception_pipeline)
 add_subdirectory(doc/tests)
 add_subdirectory(doc/controller_configuration)
+add_subdirectory(doc/trajopt_planner)
