--- a/doc/trajopt_planner/CMakeLists.txt
+++ b/doc/trajopt_planner/CMakeLists.txt
@@ -1,6 +1,6 @@
-add_executable(test_trajopt src/test_trajopt.cpp)
-target_link_libraries(test_trajopt  ${catkin_LIBRARIES} ${Boost_LIBRARIES})
+add_executable(trajopt_example src/trajopt_example.cpp)
+target_link_libraries(trajopt_example  ${catkin_LIBRARIES} ${Boost_LIBRARIES})
 
-install(TARGETS test_trajopt DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
+install(TARGETS trajopt_example DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 
 install(DIRECTORY launch DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
