fix checking of github links
Newly created files will not yet exist on github, when Travis is checking for their links.
Redirecting those links to local files will ensure that their links are correctly checked in PRs as well.

--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,8 @@ script:
   # Test build with ROS-version of Sphinx command so that it is generated same as ros.org
   - rosdoc_lite -o build .
   # Run HTML tests on generated build output to check for 404 errors, etc
-  - htmlproofer ./build --only-4xx --check-html --file-ignore ./build/html/genindex.html,./build/html/search.html,./build/html/index-msg.html --alt-ignore '/.*/' --url-ignore '#'
+  - test "$TRAVIS_PULL_REQUEST" != false && URL_SWAP="--url-swap https\://github.com/ros-planning/moveit_tutorials/blob/master/:file\://$PWD/build/html/"
+  - htmlproofer ./build --only-4xx --check-html --file-ignore ./build/html/genindex.html,./build/html/search.html --alt-ignore '/.*/' --url-ignore '#' $URL_SWAP
 
 # after_success and deploy are skipped if build is broken
 after_success:
