--- a/package.xml
+++ b/package.xml
@@ -12,6 +12,10 @@
   <maintainer email="dave@picknik.ai">Dave Coleman</maintainer>
   <maintainer email="mike@picknik.ai">Mike Lautman</maintainer>
 
+  <url type="website">https://ros-planning.github.io/moveit_tutorials</url>
+  <url type="repository">https://github.com/ros-planning/moveit_tutorials</url>
+  <url type="bugtracker">https://github.com/ros-planning/moveit_tutorials/issues</url>
+
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>pluginlib</build_depend>
