--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,3 +67,4 @@ add_subdirectory(doc/tests)
 add_subdirectory(doc/controller_configuration)
 add_subdirectory(doc/trajopt_planner)
 add_subdirectory(doc/creating_moveit_plugins/lerp_motion_planner)
+add_subdirectory(doc/moveit_cpp)
