--- a/doc/tests/CMakeLists.txt
+++ b/doc/tests/CMakeLists.txt
@@ -1,3 +1,4 @@
-catkin_add_gtest(tests_tutorial src/tests.cpp)
-target_link_libraries(tests_tutorial ${catkin_LIBRARIES} ${Boost_LIBRARIES})
-install(TARGETS tests_tutorial DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
+if(CATKIN_ENABLE_TESTING)
+  catkin_add_gtest(tests_tutorial test/tests.cpp)
+  target_link_libraries(tests_tutorial ${catkin_LIBRARIES} ${Boost_LIBRARIES})
+endif()
