Python3 migration of move_group_python_interface_tutorial

--- a/doc/move_group_python_interface/CMakeLists.txt
+++ b/doc/move_group_python_interface/CMakeLists.txt
@@ -1,4 +1,4 @@
-install(PROGRAMS
+catkin_install_python(PROGRAMS
   scripts/move_group_python_interface_tutorial.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
