Python3 migration of collision_enviroments

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,3 +68,4 @@ add_subdirectory(doc/controller_configuration)
 add_subdirectory(doc/trajopt_planner)
 add_subdirectory(doc/creating_moveit_plugins/lerp_motion_planner)
 add_subdirectory(doc/moveit_cpp)
+add_subdirectory(doc/collision_environments)
