Use system includes to silent warnings external to the package

--- a/doc/creating_moveit_plugins/lerp_motion_planner/CMakeLists.txt
+++ b/doc/creating_moveit_plugins/lerp_motion_planner/CMakeLists.txt
@@ -1,7 +1,7 @@
+include_directories(include)
 include_directories(
-  include
-  ${catkin_INCLUDE_DIRS}
   SYSTEM
+  ${catkin_INCLUDE_DIRS}
   ${Boost_INCLUDE_DIRS}
 )
 
