Fix catkin_lint errors + warnings
- declare missing run dependencies
- find_package(rviz_visual_tools) as we declare it as a build dependency
- build lerp_motion_planner_plugin directly from all sources

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,10 +8,11 @@ find_package(catkin REQUIRED
   COMPONENTS
     interactive_markers
     moveit_core
-    moveit_visual_tools
     moveit_ros_planning
     moveit_ros_planning_interface
     moveit_ros_perception
+    rviz_visual_tools
+    moveit_visual_tools
     pluginlib
     geometric_shapes
     pcl_ros
