continue work on tutorial

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,6 +63,7 @@ add_subdirectory(doc/pick_place)
 add_subdirectory(doc/planning)
 add_subdirectory(doc/planning_scene)
 add_subdirectory(doc/planning_scene_ros_api)
+add_subdirectory(doc/planning_scene_python)
 add_subdirectory(doc/robot_model_and_robot_state)
 add_subdirectory(doc/state_display)
 add_subdirectory(doc/subframes)
