Tutorial for running multiple groups/arms

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,7 @@ add_subdirectory(doc/motion_planning_api)
 add_subdirectory(doc/motion_planning_pipeline)
 add_subdirectory(doc/move_group_interface)
 add_subdirectory(doc/move_group_python_interface)
+add_subdirectory(doc/multi_group)
 add_subdirectory(doc/perception_pipeline)
 add_subdirectory(doc/pick_place)
 add_subdirectory(doc/planning)
