--- a/doc/perception_pipeline/CMakeLists.txt
+++ b/doc/perception_pipeline/CMakeLists.txt
@@ -11,3 +11,4 @@ TARGETS
 DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 
 install(DIRECTORY launch DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
+install(DIRECTORY bags DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/doc/perception_pipeline/)
