--- a/package.xml
+++ b/package.xml
@@ -57,6 +57,11 @@
   <run_depend>tf2_eigen</run_depend>
   <run_depend>tf2_geometry_msgs</run_depend>
   <run_depend>xacro</run_depend>
+  <run_depend>nodelet</run_depend>
+  <run_depend>ur_gazebo</run_depend>
+  <run_depend>gazebo_ros</run_depend>
+  <run_depend>ur_description</run_depend>
+
 
   <test_depend>moveit_resources_panda_moveit_config</test_depend>
   <test_depend>rosunit</test_depend>
