MTC Tutorial: Fix Workflow Issues
    - Add moveit_task_constructor package as upstream workspace
      package to CI.
    - Add build and run dependency entries for
      moveit_task_constructor_core package.
    - Fix EOF's.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,6 +22,7 @@ jobs:
       CCACHE_DIR: ${{ github.workspace }}/.ccache
       BASEDIR: ${{ github.workspace }}/.work
       CLANG_TIDY_BASE_REF: ${{ github.base_ref || github.ref }}
+      UPSTREAM_WORKSPACE: github:ros-planning/moveit_task_constructor#master
 
     name: ${{ matrix.env.IMAGE }}${{ matrix.env.CATKIN_LINT && ' + catkin_lint' || ''}}${{ matrix.env.CLANG_TIDY && ' + clang-tidy' || '' }}
     runs-on: ubuntu-latest
