--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -53,3 +53,9 @@ repos:
         language: system
         always_run: true
         pass_filenames: false
+  - repo: https://github.com/codespell-project/codespell
+    rev: v2.0.0
+    hooks:
+      - id: codespell
+        args: ['--write-changes', '-L', 'debians']
+        exclude: _themes
