--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -19,20 +19,18 @@ jobs:
     runs-on: ubuntu-latest
     container: ros:noetic-ros-base
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Setup Pages
-      uses: actions/configure-pages@v2
+      uses: actions/configure-pages@v4
       if: github.repository_owner == 'ros-planning'
-    - name: "Install ruby"
-      run: |
-        apt-get update -q
-        apt-get install -q -y ruby-dev libffi-dev build-essential git
-
+    - uses: ruby/setup-ruby@v1
+      with:
+        ruby-version: '3'
     - name: "Run htmlproofer.sh"
       run: ./htmlproofer.sh
 
     - name: Upload pages artifact
-      uses: actions/upload-pages-artifact@v1
+      uses: actions/upload-pages-artifact@v3
       if: github.repository_owner == 'ros-planning'
       with:
         path: build/html
@@ -47,4 +45,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v1
+        uses: actions/deploy-pages@v4
