--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,7 +22,7 @@ jobs:
     - uses: actions/checkout@v4
     - name: Setup Pages
       uses: actions/configure-pages@v4
-      if: github.repository_owner == 'ros-planning'
+      if: github.repository_owner == 'moveit'
     - uses: ruby/setup-ruby@v1
       with:
         ruby-version: '3'
@@ -33,12 +33,12 @@ jobs:
 
     - name: Upload pages artifact
       uses: actions/upload-pages-artifact@v3
-      if: github.repository_owner == 'ros-planning'
+      if: github.repository_owner == 'moveit'
       with:
         path: build/html
 
   deploy:
-    if: github.repository_owner == 'ros-planning' && github.ref == 'refs/heads/master'
+    if: github.repository_owner == 'moveit' && github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     needs: doc
     environment:
