Updated ros-planning organization to moveit (#823)
Co-authored-by: Robert Haschke <rhaschke@techfak.uni-bielefeld.de>

--- a/package.xml
+++ b/package.xml
@@ -12,9 +12,9 @@
   <maintainer email="dave@picknik.ai">Dave Coleman</maintainer>
   <maintainer email="mike@picknik.ai">Mike Lautman</maintainer>
 
-  <url type="website">https://ros-planning.github.io/moveit_tutorials</url>
-  <url type="repository">https://github.com/ros-planning/moveit_tutorials</url>
-  <url type="bugtracker">https://github.com/ros-planning/moveit_tutorials/issues</url>
+  <url type="website">https://moveit.github.io/moveit_tutorials</url>
+  <url type="repository">https://github.com/moveit/moveit_tutorials</url>
+  <url type="bugtracker">https://github.com/moveit/moveit_tutorials/issues</url>
 
   <buildtool_depend>catkin</buildtool_depend>
 
